--- a/weather-app/src/components/Header.css
+++ b/weather-app/src/components/Header.css
@@ -28,6 +28,7 @@ h1 {
     #header {
         padding-bottom: 25%;
         height: 10em;
+        width: 100%;
     }
 
     h1 {
